[ref] refactoring project core
see issue #21